[package]
name = "juniper-sqlx-subscriptions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.15"
juniper_subscriptions = "0.16"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
async-stream = "0.3"

[dependencies.sqlx]
version = "0.5"
features = ["runtime-tokio-native-tls", "sqlite"]